项目的提交

--- a/personal.html
+++ b/personal.html
@@ -11,12 +11,43 @@
   <body>
     <!-- 头部 -->
     <header>
-        <div class="container">
-            <input type="button" value="注 销" id="zx">
-        </div>
+      <div class="container">
+        <input type="button" value="注 销" id="zx" />
+      </div>
     </header>
 
-    <!--  -->
+    <!-- 内容 -->
+    <div class="container">
+      <h1>My Porsche</h1>
+      <img src="./img/personal/1.png" alt="" />
+      
+      <h2>购物</h2>
+
+      <ul class="box">
+        <img src="./img/personal/left.png" alt="" id="leftBtn">
+        <img src="./img/personal/right.png" alt="" id="rightBtn">
+        <li>
+          <img src="./img/personal/4.png" alt="">
+          <img src="./img/personal/5.png" alt="">
+          <img src="./img/personal/6.png" alt="">
+        </li>
+      </ul>
+
+      <h2>你感兴趣的最新消息</h2>
+      <img src="./img/personal/3.png" alt="" />
+    </div>
+
+
+
+    <!-- 底部 -->
+    <footer>
+      <div class="container">
+        <p>&copy; 保时捷（中国）汽车销售有限公司</p>
+        <p>保时捷中国强烈建议您：只在授权的保时捷中心购买车辆和配件。</p>
+        <p>请点击这里获得更多信息</p>
+        <p>环保信息公开</p>
+      </div>
+    </footer>
 
     <script src="./node_modules/jquery/dist/jquery.js"></script>
     <script src="./node_modules/axios/dist/axios.js"></script>
